--- a/hobby.html
+++ b/hobby.html
@@ -1,7 +1,16 @@
 <!doctype html>
 <head>
+   <script src="http://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
+    <!-- 합쳐지고 최소화된 최신 CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bangers&family=Lemon&display=swap" rel="stylesheet">
+    <!-- 부가적인 테마 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+  
+    <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bangers&family=Lemon&display=swap" rel="stylesheet">
 
   <title>Index of Me</title>
   <style>
@@ -55,12 +64,12 @@
 
 <body>
 
-<h1><a href="assignment.html">Introduce Myself : JUNE</a></h1>
+<h1><a href="index.html">Introduce Myself : JUNE</a></h1>
 <div id="grid">
 
     <div id="list">
-      <ol>
-        <li><a href="name.html">Name</a></li>
+      <ol class="nav nav-pills nav-stacked">
+        <li><a href="name1.html">Name</a></li>
         <li><a href="hobby.html">Hobby</a></li>
         <li><a href="family.html">Family</a></li>
       </ol>
