--- a/index.html
+++ b/index.html
@@ -10,68 +10,57 @@
     <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bangers&family=Lemon&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bangers&family=Lemon&display=swap" rel="stylesheet">
 
-  <title>Index of Me</title>
-  <style>
-      #grid{
-        display:grid;
-        grid-template-columns:130px 1fr;
-      }
-      #paragraph{
-        border-left:dashed 1.5px white;
-        padding:10px;
-        margin:0;
-        color:white;
-        font-family: 'Bangers', cursive;
-        font-family: 'Abril Fatface', cursive;
-        font-family: 'Lemon', cursive;
-      }
-      h1{
-        text-shadow: 5px 5px #51662A;
-        border-bottom:dashed 1.5px white;
-        margin:0;
-        padding:20px;
-        text-align:center;
-        font-family: 'Bangers', cursive;
-        font-family: 'Abril Fatface', cursive;
-        font-family: 'Lemon', cursive;
-      }
-      ol{
-        color:white;
-        text-shadow:3px 3px #AE711E;
-      }
-      #list{
-        font-family: 'Bangers', cursive;
-        font-family: 'Abril Fatface', cursive;
-        font-family: 'Lemon', cursive;
-      }
-      body{
-        margin:0;
-        background-color:#A99B3A;
-      }
-      a{
-        text-decoration:none;
-        color:white;
-        text-align:center;
-      }
-      #click{
-        text-shadow:2px 1.5px black;
-      }
-      .panel-footer
-      {
-        position:fixed;
-        bottom:0;
-        width:100%;
-        text-align:center;
-        background-color: #51662A;
-        color:white;
-        font-family: 'Bangers', cursive;
-        font-family: 'Abril Fatface', cursive;
-        font-family: 'Lemon', cursive;
-        text-shadow:2px 1.5px #A99B3A;
-      }
-  </style>
+    <title>Index of Me</title>
+    <style>
+        #grid{
+          display:grid;
+          grid-template-columns:130px 1fr;
+        }
+        #paragraph{
+          border-left:dashed 1.5px white;
+          padding:10px;
+          margin:0;
+          color:white;
+        }
+        h1{
+          text-shadow: 5px 5px #51662A;
+          border-bottom:dashed 1.5px white;
+          margin:0;
+          padding:20px;
+          text-align:center;
+        }
+        ol{
+          color:white;
+          text-shadow:3px 3px #AE711E;
+        }
+        body{
+          margin:0;
+          background-color:#A99B3A;
+          font-family: 'Bangers', cursive;
+          font-family: 'Abril Fatface', cursive;
+          font-family: 'Lemon', cursive;
+        }
+        a{
+          text-decoration:none;
+          color:white;
+          text-align:center;
+        }
+        #click{
+          text-shadow:2px 1.5px black;
+        }
+        .panel-footer
+        {
+          position:fixed;
+          bottom:0;
+          width:100%;
+          text-align:center;
+          background-color: #51662A;
+          color:white;
+          text-shadow:2px 1.5px #A99B3A;
+        }
+    </style>
 </head>
 
 
@@ -80,7 +69,7 @@
 <h1><a href="index.html">Introduce Myself : JUNE</a></h1>
 <div id="grid">
 
-    <div id="list">
+    <div>
       <ol class="nav nav-pills nav-stacked">
         <li><a href="name1.html">Name</a></li>
         <li><a href="hobby.html">Hobby</a></li>
@@ -94,6 +83,6 @@
         I want to learn lot of thing to make cool web or app :)
         <br><br><strong id="click">Click what you want about me! </strong></br></br>
     </div>
-    <div class="panel-footer">Made by June<br>LikeLion x SKKU</div>
+    <div class="panel-footer">Made by June<br>LikeLion x SKKU<br>2020.05</div>
 </div>
   </body>
