--- a/name1.html
+++ b/name1.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <head>
     <script src="http://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
     <!-- 합쳐지고 최소화된 최신 CSS -->
@@ -10,74 +9,69 @@
   
     <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-  <title>Name</title>
-  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bangers&family=Lemon&display=swap" rel="stylesheet">
-  <style>
-    a
-    {
-      text-decoration:none;
-      color:white;
-      text-align:center;
-    }
-    h1
-    {
-      border-bottom:dashed gray 1.5px;
-      text-align:center;
-      padding:20px;
-      text-shadow: 5px 5px #A99AD4;
-      background-color:#DFE5F1;
-      margin:0;
-      font-family: 'Bangers', cursive;
-      font-family: 'Abril Fatface', cursive;
-      font-family: 'Lemon', cursive;
-    }
-    #pa
-    {
-      border-left:1.5px gray dashed;
-      padding:10px;
-      color:gray;
-      font-family: 'Bangers', cursive;
-      font-family: 'Abril Fatface', cursive;
-      font-family: 'Lemon', cursive;
-    }
-    body
-    {
-      margin:0;
-      background-color:#DFE5F1;
-    }
-    #grid
-    {
-      display:grid;
-      grid-template-columns:120px 1fr;
-    }
-    .list
-    {
-      color:#416FAB;
-      text-shadow: 1.5px 1.5px #819EC7;
-      font-family: 'Bangers', cursive;
-      font-family: 'Abril Fatface', cursive;
-      font-family: 'Lemon', cursive;
-    }
-    .gone
-    {
-      font-style:italic;
-      color:black;
-      text-shadow:2px 1.5px gray;
-    }
-    .panel-footer
+    <title>Name</title>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bangers&family=Lemon&display=swap" rel="stylesheet">
+    <style>
+      a
       {
-        position:fixed;
-        bottom:0;
-        width:100%;
-        text-align:center;
-        background-color: #A99AD4;
+        text-decoration:none;
         color:white;
+        text-align:center;
+      }
+      h1
+      {
+        border-bottom:dashed gray 1.5px;
+        text-align:center;
+        padding:20px;
+        text-shadow: 5px 5px #A99AD4;
+        background-color:#DFE5F1;
+        margin:0;
+      }
+      #paragraph
+      {
+        border-left:1.5px gray dashed;
+        padding:10px;
+        color:gray;
+      }
+      body
+      {
+        margin:0;
+        background-color:#DFE5F1;
         font-family: 'Bangers', cursive;
         font-family: 'Abril Fatface', cursive;
         font-family: 'Lemon', cursive;
+      }
+      #grid
+      {
+        display:grid;
+        grid-template-columns:120px 1fr;
+      }
+      .list
+      {
+        color:#416FAB;
+        text-shadow: 1.5px 1.5px #819EC7;
+      }
+      .gone
+      {
+        font-style:italic;
+        color:black;
         text-shadow:2px 1.5px gray;
       }
-  </style>
+      .panel-footer
+        {
+          position:fixed;
+          bottom:0;
+          width:100%;
+          text-align:center;
+          background-color: #A99AD4;
+          color:white;
+          text-shadow:2px 1.5px gray;
+        }
+        img
+        {
+          width:700px;
+        }
+    </style>
 </head>
 
 <body>
@@ -89,12 +83,13 @@
       <li><a href="Family.html" class="list">Family</a></li>
     </ol>
 
-    <div id="pa">
+    <div id="paragraph">
       My name is Jun Hee Kwon.
       My friends call me as just June or Junny as nickname.
       <br><br>My Instagram ID is also <strong class="gone">'gone_june'</strong>
       as transformed version of my name.</br></br>
+      <img src="insta.png">
     </div>
   </div>
-  <div class="panel-footer">Made by June<br>LikeLion x SKKU</div>
+  <div class="panel-footer">Made by June<br>LikeLion x SKKU<br>2020.05</div>
 </body>
