--- a/name1.html
+++ b/name1.html
@@ -88,7 +88,7 @@
       My friends call me as just June or Junny as nickname.
       <br><br>My Instagram ID is also <strong class="gone">'gone_june'</strong>
       as transformed version of my name.</br></br>
-      <img src="insta.png">
+      <img src="insta.png" class="img-rounded">
     </div>
   </div>
   <div class="panel-footer">Made by June<br>LikeLion x SKKU<br>2020.05</div>
