--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       <ol class="nav nav-pills nav-stacked">
         <li><a href="name1.html">Name</a></li>
         <li><a href="hobby.html">Hobby</a></li>
+        <li><a href="timeline.html">Favorite Singer</a></li>
         <li><a href="family.html">Family</a></li>
       </ol>
     </div>
