--- a/family.html
+++ b/family.html
@@ -69,8 +69,9 @@
 
     <div id="list">
       <ol class="nav nav-pills nav-stacked">
-        <li><a href="name1.html">Name</a></li>
+        <li><a href="name.html">Name</a></li>
         <li><a href="hobby.html">Hobby</a></li>
+        <li><a href="timeline.html">Favorite Singer</a></li>
         <li><a href="family.html">Family</a></li>
       </ol>
     </div>
