--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <div>
       <ol class="nav nav-pills nav-stacked">
-        <li><a href="name1.html">Name</a></li>
+        <li><a href="name.html">Name</a></li>
         <li><a href="hobby.html">Hobby</a></li>
         <li><a href="timeline.html">Favorite Singer</a></li>
         <li><a href="family.html">Family</a></li>
