--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
           background-color: #51662A;
           color:white;
           text-shadow:2px 1.5px #A99B3A;
+          font-family: 'Bangers', cursive;
+          font-family: 'Abril Fatface', cursive;
+          font-family: 'Lemon', cursive;
         }
     </style>
 </head>
