--- a/timeline.html
+++ b/timeline.html
@@ -73,6 +73,7 @@
     <a href="#title"><button id="tothetop">
         TOP
     </button></a>
+    <div class="panel-footer">Made by June<br>LikeLion x SKKU<br>2020.05</div>
     
 </body>
 </html>
