--- a/hobby.html
+++ b/hobby.html
@@ -58,6 +58,19 @@
       #click{
         text-shadow:2px 1.5px black;
       }
+      .panel-footer
+        {
+          position:fixed;
+          bottom:0;
+          width:100%;
+          text-align:center;
+          background-color: #51662A;
+          color:white;
+          text-shadow:2px 1.5px #A99B3A;
+          font-family: 'Bangers', cursive;
+          font-family: 'Abril Fatface', cursive;
+          font-family: 'Lemon', cursive;
+        }
   </style>
 </head>
 
@@ -85,5 +98,6 @@
 </div>
 
 
+<div class="panel-footer">Made by June<br>LikeLion x SKKU<br>2020.05</div>
 
   </body>
