--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
           display:grid;
           grid-template-columns:130px 1fr;
         }
+       
         #paragraph{
           border-left:dashed 1.5px white;
           padding:10px;
           margin:0;
-          color:white;
+          color:White;
         }
         h1{
           text-shadow: 5px 5px #51662A;
@@ -70,6 +71,8 @@
 <body>
 
 <h1><a href="index.html">Introduce Myself : JUNE</a></h1>
+
+<script src="script.js"></script>
 <div id="grid">
 
     <div>
@@ -86,7 +89,9 @@
         My name is <strong>June</strong>. I'm new to Like Lion in SKKU.
         I want to learn lot of thing to make cool web or app :)
         <br><br><strong id="click">Click what you want about me! </strong></br></br>
+
     </div>
+    
     <div class="panel-footer">Made by June<br>LikeLion x SKKU<br>2020.05</div>
 </div>
   </body>
