--- a/name.html
+++ b/name.html
@@ -80,8 +80,10 @@
     <ol class="nav nav-pills nav-stacked">
       <li><a href="name.html" class="list">Name</a></li>
       <li><a href="Hobby.html" class="list">Hobby</a></li>
-      <li><a href="timeline.html">Favorite Singer</a></li>
+      <li><a href="timeline.html" class="list">Favorite Singer</a></li>
       <li><a href="Family.html" class="list">Family</a></li>
+      <li><a href="time.html" class="list">Clock</a></li>
+
     </ol>
 
     <div id="paragraph">
