--- a/hobby.html
+++ b/hobby.html
@@ -86,6 +86,8 @@
         <li><a href="hobby.html">Hobby</a></li>
         <li><a href="timeline.html">Favorite Singer</a></li>
         <li><a href="family.html">Family</a></li>
+        <li><a href="time.html">Clock</a></li>
+
       </ol>
     </div>
 
