--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         <li><a href="hobby.html">Hobby</a></li>
         <li><a href="timeline.html">Favorite Singer</a></li>
         <li><a href="family.html">Family</a></li>
+        <li><a href="time.html">Clock</a></li>
       </ol>
     </div>
 
