--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         <li><a href="timeline.html">Favorite Singer</a></li>
         <li><a href="family.html">Family</a></li>
         <li><a href="time.html">Clock</a></li>
+        <li><a href="time.html">HI</a></li>
       </ol>
     </div>
 
