--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         My name is <strong>June</strong>. I'm new to Like Lion in SKKU.
         I want to learn lot of thing to make cool web or app :)
         <br><br><strong id="click">Click what you want about me! </strong></br></br>
+        <div class="jsweather">날씨창</div>
 
     </div>
     
