--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
 <br><h1><a href="index.html">Introduce Myself : JUNE</a></h1>
 
 
-<script src="script.js"></script>
 <div id="grid">
 
     <div>
@@ -125,9 +124,8 @@
         I want to learn lot of thing to make cool web or app :)
         <br><br><strong id="click">Click what you want about me! </strong></br></br>
         <div class="jsweather">날씨창</div>
-
     </div>
-    
+    <script src="weather.js"></script>
     <div class="panel-footer">Made by June<br>LikeLion x SKKU<br>2020.05</div>
 </div>
   </body>
