--- a/index.html
+++ b/index.html
@@ -123,9 +123,31 @@
         My name is <strong>June</strong>. I'm new to Like Lion in SKKU.
         I want to learn lot of thing to make cool web or app :)
         <br><br><strong id="click">Click what you want about me! </strong></br></br>
+        <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://june-2.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                            
         <div class="jsweather">날씨창</div>
     </div>
-    <script src="weather.js"></script>
-    <div class="panel-footer">Made by June<br>LikeLion x SKKU<br>2020.05</div>
+
+<script src="weather.js"></script>
+<div class="panel-footer">Made by June<br>LikeLion x SKKU<br>2020.05</div>
 </div>
   </body>
